# genezio-rs

./: Cargo.toml  README.md
cargo-genezio/: Cargo.toml
cargo-genezio/src/: main.rs  options.rs
cargo-genezio/src/cmd/: build.rs  deploy.rs  mod.rs  new.rs  read.rs  write.rs
cli/: Cargo.toml
cli/src/: main.rs  metadata.rs
cli/src/cmd/: doctor.rs  new.rs
genezio/: Cargo.toml
genezio/src/: lib.rs
meta/: Cargo.toml
meta/src/: lib.rs
