[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "genezio-rs"
path = "src/main.rs"

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
is_executable = "1.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
