[package]
name = "genezio"
version = "0.1.0"
edition = "2021"

[dependencies]
genezio-meta = { path = "../meta" }
anyhow = "1.0.75"
axum = "0.7"
# upgrade to main when this is merged
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git", branch = "hyper1_upgrade" }
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
